--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,16 @@ webhooks:
     on_failure: always  # options: [always|never|change] default: always
     on_start: never     # options: [always|never|change] default: always
 
+before_install:
+  - npm i -g yarn --cache-min 999999999
+
+install:
+ - node --version
+ - yarn install
+ 
+cache:
+  directories:
+  - $HOME/.yarn-cache
 
 
 # deploy:
