build(git): Cria validação para commits através de hooks
Cria validação para commits através de githooks, forçando o commit a um formato usado a seguinte

convenção:

https://github.com/conventional-changelog/conventional-changelog-angular/blob/master/convention.md

--- a/package.json
+++ b/package.json
@@ -43,6 +43,37 @@
     "show:build": "serveur -L -cbJS -o www -p 3000",
     "show:coverage": "serveur -L -cbJS -o coverage/html -p 8080"
   },
+  "config": {
+    "ghooks": {
+      "commit-msg": "validate-commit-msg",
+      "pre-push": "yarn test",
+      "post-merge": "yarn install",
+      "post-rewrite": "yarn install"
+    },
+    "validate-commit-msg": {
+      "types": [
+        "feat",
+        "fix",
+        "docs",
+        "style",
+        "refactor",
+        "perf",
+        "test",
+        "chore",
+        "revert",
+        "ci",
+        "build"
+      ],
+      "warnOnFail": false,
+      "maxSubjectLength": 100,
+      "subjectPattern": ".+",
+      "subjectPatternErrorMsg": "subject does not match subject pattern!",
+      "helpMessage": ""
+    },
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prodest/es-na-palma-da-mao-mobile.git"
@@ -95,6 +126,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "cordova": "^6.3.1",
     "css-loader": "^0.25.0",
+    "cz-conventional-changelog": "^1.2.0",
     "del": "^2.2.2",
     "eslint-config-prodest": "^1.0.12",
     "eslint-config-prodest-angular": "^1.0.2",
@@ -105,6 +137,7 @@
     "file-loader": "^0.9.0",
     "fs-extra": "^0.30.0",
     "gh-got": "^5.0.0",
+    "ghooks": "^1.3.2",
     "github": "^3.1.0",
     "glob": "^7.0.6",
     "gulp": "^3.9.1",
@@ -148,6 +181,7 @@
     "mocha": "^3.0.2",
     "node-sass": "^3.10.1",
     "octonode": "^0.7.6",
+    "opn-cli": "^3.1.0",
     "phantomjs-prebuilt": "^2.1.12",
     "raw-loader": "^0.5.1",
     "request": "^2.75.0",
@@ -167,6 +201,7 @@
     "typescript": "^2.0.3",
     "ui-router-extras": "^0.1.2",
     "url-loader": "^0.5.7",
+    "validate-commit-msg": "^2.8.2",
     "vinyl-paths": "^2.1.0",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-middleware": "^1.8.4",
@@ -193,7 +228,6 @@
     "ionic-native-transitions": "^1.0.2",
     "moment": "^2.15.1",
     "ngstorage": "^0.3.11",
-    "opn-cli": "^3.1.0",
     "roboto-fontface": "^0.6.0"
   }
 }
