--- a/package.json
+++ b/package.json
@@ -218,10 +218,12 @@
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
+    "angular-chart.js": "^1.0.3",
     "angular-i18n": "^1.5.8",
     "angular-material": "^1.1.1",
     "angular-sanitize": "^1.5.8",
     "angular-ui-router": "^0.3.1",
+    "chart.js": "^2.3.0",
     "font-awesome": "^4.6.3",
     "ionic-angular": "^1.3.1",
     "ionic-calendar": "github:hoisel/ionic-calendar#v1.0.5",
@@ -232,4 +234,3 @@
     "roboto-fontface": "^0.6.0"
   }
 }
-
