--- a/package.json
+++ b/package.json
@@ -99,30 +99,25 @@
   },
   "homepage": "https://github.com/prodest/es-na-palma-da-mao-mobile#readme",
   "devDependencies": {
-    "@prodest/angular-lazy-bundler": "^0.4.1",
-    "@types/angular": "^1.5.15",
+    "@types/angular": "^1.5.20",
     "@types/angular-material": "^1.1.37",
     "@types/angular-ui-router": "^1.1.34",
     "@types/chai": "^3.4.33",
     "@types/cordova": "0.0.34",
     "@types/cordova-ionic": "0.0.29",
     "@types/ionic": "0.0.32",
-    "@types/mocha": "^2.2.32",
+    "@types/mocha": "^2.2.33",
     "@types/moment": "^2.13.0",
     "@types/ngstorage": "^0.3.33",
-    "@types/oclazyload": "0.0.31",
     "@types/rx": "^2.5.32",
     "@types/sinon": "^1.16.30",
     "@types/sinon-stub-promise": "^1.0.27",
-    "@types/systemjs": "^0.19.31",
-    "@types/ui-router-extras": "0.0.31",
-    "@types/webpack": "^1.12.35",
+    "@types/webpack": "^2.0.0",
     "awesome-typescript-loader": "^2.2.4",
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.14.0",
-    "bluebird": "^3.4.6",
     "chai": "^3.5.0",
-    "clean-webpack-plugin": "^0.1.13",
+    "clean-webpack-plugin": "^0.1.14",
     "concurrently": "^3.1.0",
     "connect-history-api-fallback": "^1.3.0",
     "cordova": "^6.3.1",
@@ -133,33 +128,22 @@
     "eslint-config-prodest-angular": "^1.0.2",
     "eslint-plugin-angular": "^1.4.1",
     "event-stream": "^3.3.4",
-    "express-history-api-fallback": "^2.0.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "fs-extra": "^0.30.0",
     "gh-got": "^5.0.0",
     "ghooks": "^1.3.2",
-    "github": "^3.1.0",
     "glob": "^7.0.6",
     "gulp": "^3.9.1",
-    "gulp-bump": "^2.4.0",
-    "gulp-cheerio": "^0.6.2",
-    "gulp-exec": "^2.1.2",
-    "gulp-git": "^1.11.3",
+    "gulp-babel": "^6.1.2",
     "gulp-help": "^1.6.1",
-    "gulp-if": "^2.0.1",
-    "gulp-order": "^1.1.1",
-    "gulp-plumber": "^1.1.0",
     "gulp-shell": "^0.5.2",
-    "gulp-tap": "^0.1.3",
-    "gulp-util": "^3.0.7",
     "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.24.0",
+    "html-webpack-plugin": "^2.24.1",
     "htmlhint": "^0.9.13",
     "htmlhint-loader": "^1.0.0",
     "image-webpack-loader": "^3.0.0",
-    "ionic": "^2.0.0",
-    "ionic-calendar": "github:hoisel/ionic-calendar#v1.0.5",
+    "ionic": "^2.1.8",
     "istanbul": "^0.4.5",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.5.2",
@@ -170,7 +154,7 @@
     "karma-coveralls": "^1.1.2",
     "karma-es6-shim": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
-    "karma-mocha": "^1.1.1",
+    "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-remap-coverage": "^0.1.2",
@@ -178,14 +162,14 @@
     "karma-sinon-stub-promise": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
-    "lodash": "^4.16.0",
+    "lodash": "^4.17.2",
     "mocha": "^3.0.2",
-    "node-sass": "^3.10.1",
+    "node-sass": "^3.13.0",
     "octonode": "^0.7.6",
     "opn-cli": "^3.1.0",
     "phantomjs-prebuilt": "^2.1.12",
     "raw-loader": "^0.5.1",
-    "request": "^2.75.0",
+    "request": "^2.78.0",
     "rimraf": "^2.5.4",
     "roboto-font": "^0.1.0",
     "run-sequence": "^1.2.2",
@@ -200,21 +184,22 @@
     "tslint": "^4.0.0-dev.0",
     "tslint-loader": "^2.1.5",
     "typescript": "^2.1.1",
-    "ui-router-extras": "^0.1.2",
     "url-loader": "^0.5.7",
     "validate-commit-msg": "^2.8.2",
     "vinyl-paths": "^2.1.0",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^2.1.0-beta.9",
-    "webpack-hot-middleware": "^2.13.0",
+    "webpack-hot-middleware": "^2.13.2",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "^0.15.0",
     "webpack-validator": "^2.2.9",
     "win-spawn": "^2.0.0",
-    "yargs": "^5.0.0"
+    "yargs": "^6.4.0"
   },
   "dependencies": {
+    "@hoisel/ionic-calendar": "^1.1.1",
+    "@types/ui-router-extras": "^0.0.31",
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
@@ -222,11 +207,10 @@
     "angular-i18n": "^1.5.8",
     "angular-material": "^1.1.1",
     "angular-sanitize": "^1.5.8",
-    "angular-ui-router": "^0.3.1",
-    "chart.js": "^2.3.0",
+    "angular-ui-router": "^0.3.2",
+    "chart.js": "^2.4.0",
     "font-awesome": "^4.6.3",
     "ionic-angular": "^1.3.1",
-    "ionic-calendar": "github:hoisel/ionic-calendar#v1.0.5",
     "ionic-native": "^1.3.24",
     "ionic-native-transitions": "^1.0.2",
     "moment": "^2.15.1",
