--- a/package.json
+++ b/package.json
@@ -212,6 +212,7 @@
     "yargs": "^5.0.0"
   },
   "dependencies": {
+    "@types/hammerjs": "^2.0.33",
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
