chore(build): Adiciona tree-shaking ao build de prod
Adiciona tree-shaking(através do gulp) ao build de prod para remover fonts não utilizadas e diminuir

o tamanho da pasta www e consequentemente o tamanho do apk.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build:dev": "yarn build:vendor && yarn build:dev:app",
     "build:prod:app": "webpack --config config/webpack.config.prod.js --progress --profile",
     "prebuild:prod": "yarn clean:build",
-    "build:prod": "yarn build:vendor && yarn build:prod:app",
+    "build:prod": "yarn build:vendor && yarn build:prod:app && gulp tree-shaking",
     "build": "yarn build:prod",
     "preserver:restart": "opn http://localhost:3000/",
     "server:restart": "webpack-dev-server --config config/webpack.config.dev.js --progress --profile --watch --content-base www/",
