build(settings): gera settings dinâmicamente durante o build
gera settings dinâmicamente durante o build. A geração das settings é feita através da leitura de variáveis de ambiente seguida pelos valores default de cada configuração. Essa alteração, juntamente com a criação do ambiente dev do acesso cidadão, cria um sandbox de desenvolvimento que será usado por padrão e permite que o espm seja baixado e executado imediatamente por terceiros.

BREAKING CHANGE: gera settings dinamicamente durante o build.

closes #212, #232

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ npm-debug.log*
 config.xml.backup
 
 # Arquivo de configuração do portal com informações sensiveis
-src/app/shared/settings/settings.ts
+src/app/shared/settings/settings.json
 
 # Runtime data
 pids
@@ -85,3 +85,6 @@ _package.json
 
 # Webpack awesome-typescript loader cache
 .awcache
+
+# env config file
+.env
