--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:prod:app": "webpack --config config/webpack.config.prod.js --progress --profile",
     "prebuild:prod": "yarn clean:build",
     "build:prod": "yarn build:vendor && yarn build:prod:app && gulp tree-shaking",
-    "build": "yarn build:prod",
+    "build": "yarn build:prod", 
     "preserver:restart": "opn http://localhost:3000/",
     "server:restart": "webpack-dev-server --config config/webpack.config.dev.js --progress --profile --watch --content-base www/",
     "preserver:start": "yarn clean:build",
@@ -124,6 +124,7 @@
     "css-loader": "^0.25.0",
     "cz-conventional-changelog": "^1.2.0",
     "del": "^2.2.2",
+    "dotenv": "^2.0.0",
     "eslint-config-prodest": "^1.0.12",
     "eslint-config-prodest-angular": "^1.0.2",
     "eslint-plugin-angular": "^1.4.1",
@@ -168,6 +169,7 @@
     "octonode": "^0.7.6",
     "opn-cli": "^3.1.0",
     "phantomjs-prebuilt": "^2.1.12",
+    "pre-build-webpack": "^0.1.0",
     "raw-loader": "^0.5.1",
     "request": "^2.78.0",
     "rimraf": "^2.5.4",
@@ -187,6 +189,7 @@
     "url-loader": "^0.5.7",
     "validate-commit-msg": "^2.8.2",
     "vinyl-paths": "^2.1.0",
+    "watch-ignore-webpack-plugin": "^1.0.0",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^2.1.0-beta.9",
