--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
+    "change-case": "^3.0.0",
     "clean-webpack-plugin": "^0.1.14",
     "concurrently": "^3.1.0",
     "connect-history-api-fallback": "^1.3.0",
