--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "build:dev:app": "webpack --config config/webpack.config.dev.js --progress --profile",
     "prebuild:dev": "yarn clean:build",
     "build:dev": "yarn build:vendor && yarn build:dev:app",
+    "prebuild:stats": "yarn build:dev",
+    "build:stats": "yarn show:stats:app && yarn show:stats:vendors",
     "build:prod:app": "webpack --config config/webpack.config.prod.js --progress --profile",
     "prebuild:prod": "yarn clean:build",
     "build:prod": "yarn build:vendor && yarn build:prod:app && gulp tree-shaking",
@@ -42,6 +44,8 @@
     "server:hmr:start": "yarn build:vendor && yarn server:hmr:restart",
     "show:build": "serveur -L -cbJS -o www -p 3000",
     "show:coverage": "serveur -L -cbJS -o coverage/html -p 8080",
+    "show:stats:app": "source-map-explorer www/main.bundle.js",
+    "show:stats:vendors": "source-map-explorer www/dll.vendors.js",
     "github:release": "sh ./release.sh",
     "component": "gulp generate --template component",
     "state": "gulp generate --template state"
@@ -186,6 +190,7 @@
     "serveur": "^2.1.0",
     "sinon": "^1.17.6",
     "sinon-stub-promise": "^3.0.1",
+    "source-map-explorer": "^1.3.3",
     "style-loader": "^0.13.1",
     "stylus-loader": "^2.3.1",
     "supports-color": "^3.1.2",
