fix(geral): awaiter.run não está sobrescrevendo ts helper '__awaiter'
awaiter.run.ts é responsável por sobrescrever o helper ___awaiter gerado pelo typescript de forma

que ele se "encaixe" ao angular.

closes #236

--- a/package.json
+++ b/package.json
@@ -228,6 +228,7 @@
     "ionic-native-transitions": "^1.0.2",
     "moment": "^2.15.1",
     "ngstorage": "^0.3.11",
-    "roboto-fontface": "^0.6.0"
+    "roboto-fontface": "^0.6.0",
+    "tslib": "^1.2.0"
   }
 }
