--- a/package.json
+++ b/package.json
@@ -48,15 +48,13 @@
     "show:stats:vendors": "source-map-explorer www/dll.vendors.js && source-map-explorer www/dll.vendors.css",
     "github:release": "sh ./release.sh",
     "component": "gulp generate --template component",
-    "state": "gulp generate --template state"
+    "state": "gulp generate --template state",
+    "commitmsg": "validate-commit-msg",
+    "prepush": "yarn test",
+    "postmerge": "yarn install",
+    "postrewrite": "yarn install"
   },
   "config": {
-    "ghooks": {
-      "commit-msg": "validate-commit-msg",
-      "pre-push": "yarn test",
-      "post-merge": "yarn install",
-      "post-rewrite": "yarn install"
-    },
     "validate-commit-msg": {
       "types": [
         "feat",
@@ -105,43 +103,37 @@
   },
   "homepage": "https://github.com/prodest/es-na-palma-da-mao-mobile#readme",
   "devDependencies": {
-    "@types/angular": "^1.5.20",
-    "@types/angular-material": "^1.1.37",
+    "@types/angular": "^1.6.2",
+    "@types/angular-material": "^1.1.44",
     "@types/chai": "^3.4.33",
     "@types/cordova": "0.0.34",
     "@types/cordova-ionic": "0.0.29",
-    "@types/ionic": "0.0.32",
-    "@types/mocha": "^2.2.33",
+    "@types/ionic": "^0.0.33",
+    "@types/mocha": "^2.2.38",
     "@types/moment": "^2.13.0",
     "@types/ngstorage": "^0.3.33",
-    "@types/rx": "^2.5.32",
+    "@types/rx": "^2.5.34",
     "@types/sinon": "^1.16.30",
     "@types/sinon-stub-promise": "^1.0.27",
-    "@types/ui-router-extras": "^0.0.31",
-    "@types/webpack": "^2.0.0",
-    "awesome-typescript-loader": "^2.2.4",
+    "@types/ui-router-extras": "^0.0.32",
+    "@types/webpack": "^2.2.4",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
     "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
-    "change-case": "^3.0.0",
-    "clean-webpack-plugin": "^0.1.14",
+    "change-case": "^3.0.1",
     "concurrently": "^3.1.0",
-    "connect-history-api-fallback": "^1.3.0",
-    "cordova": "^6.3.1",
-    "css-loader": "^0.25.0",
+    "cordova": "^6.5.0",
+    "css-loader": "^0.26.1",
     "cz-conventional-changelog": "^1.2.0",
     "del": "^2.2.2",
-    "dotenv": "^2.0.0",
+    "dotenv": "^4.0.0",
     "eslint-config-prodest": "^1.0.12",
     "eslint-config-prodest-angular": "^1.0.2",
-    "eslint-plugin-angular": "^1.4.1",
-    "event-stream": "^3.3.4",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
-    "fs-extra": "^0.30.0",
-    "gh-got": "^5.0.0",
-    "ghooks": "^1.3.2",
+    "eslint-plugin-angular": "^1.6.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc",
+    "file-loader": "^0.10.0",
     "glob": "^7.0.6",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -150,85 +142,79 @@
     "gulp-shell": "^0.5.2",
     "gulp-template": "^4.0.0",
     "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.24.1",
+    "html-webpack-plugin": "^2.28.0",
     "htmlhint": "^0.9.13",
-    "htmlhint-loader": "^1.0.0",
-    "image-webpack-loader": "^3.0.0",
-    "ionic": "^2.1.8",
+    "htmlhint-loader": "^1.1.1",
+    "husky": "^0.13.1",
+    "image-webpack-loader": "^3.2.0",
     "istanbul": "^0.4.5",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "jasmine-core": "^2.5.2",
+    "istanbul-instrumenter-loader": "^1.2.0",
     "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
+    "karma": "^1.4.1",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
     "karma-es6-shim": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.0",
+    "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-remap-coverage": "^0.1.2",
+    "karma-remap-coverage": "^0.1.4",
     "karma-sinon": "^1.0.5",
     "karma-sinon-stub-promise": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "lodash": "^4.17.2",
-    "mocha": "^3.0.2",
-    "node-sass": "^3.13.0",
-    "octonode": "^0.7.6",
+    "karma-webpack": "^2.0.2",
+    "lodash": "^4.17.4",
+    "mocha": "^3.2.0",
+    "node-sass": "^4.4.0",
     "opn-cli": "^3.1.0",
-    "phantomjs-prebuilt": "^2.1.12",
-    "pre-build-webpack": "^0.1.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "raw-loader": "^0.5.1",
-    "request": "^2.78.0",
+    "request": "^2.79.0",
     "rimraf": "^2.5.4",
     "roboto-font": "^0.1.0",
     "run-sequence": "^1.2.2",
-    "sass-loader": "^4.0.2",
+    "sass-loader": "^4.1.1",
     "semver": "^5.3.0",
     "serveur": "^2.1.0",
-    "sinon": "^1.17.6",
-    "sinon-stub-promise": "^3.0.1",
+    "sinon": "^1.17.7",
+    "sinon-stub-promise": "^4.0.0",
     "source-map-explorer": "^1.3.3",
     "style-loader": "^0.13.1",
-    "stylus-loader": "^2.3.1",
-    "supports-color": "^3.1.2",
-    "tslint": "^4.0.0-dev.0",
-    "tslint-loader": "^2.1.5",
-    "typescript": "^2.1.1",
+    "supports-color": "^3.2.3",
+    "tslint": "^4.4.2",
+    "tslint-loader": "^3.3.0",
+    "typescript": "^2.1.5",
     "url-loader": "^0.5.7",
     "validate-commit-msg": "^2.8.2",
     "vinyl-paths": "^2.1.0",
-    "watch-ignore-webpack-plugin": "^1.0.0",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^2.1.0-beta.9",
-    "webpack-hot-middleware": "^2.13.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-dev-server": "^2.2.1",
+    "webpack-hot-middleware": "^2.16.1",
     "webpack-md5-hash": "0.0.5",
-    "webpack-merge": "^1.0.2",
-    "webpack-validator": "^2.2.9",
-    "win-spawn": "^2.0.0",
-    "yargs": "^6.4.0"
+    "webpack-merge": "^2.6.1",
+    "yargs": "^6.6.0"
   },
   "dependencies": {
     "@hoisel/ionic-calendar": "^1.1.1",
-    "angular": "^1.5.8",
-    "angular-animate": "^1.5.8",
-    "angular-aria": "^1.5.8",
-    "angular-chart.js": "^1.0.3",
-    "angular-i18n": "^1.5.8",
+    "angular": "^1.6.1",
+    "angular-animate": "^1.6.1",
+    "angular-aria": "^1.6.1",
+    "angular-chart.js": "^1.1.1",
+    "angular-i18n": "^1.6.1",
     "angular-material": "^1.1.1",
-    "angular-sanitize": "^1.5.8",
-    "angular-ui-router": "^0.3.2",
+    "angular-sanitize": "^1.6.1",
+    "angular-ui-router": "^0.4.2",
     "chart.js": "^2.4.0",
     "font-awesome": "^4.6.3",
     "ionic-angular": "^1.3.1",
     "ionic-native": "^1.3.24",
-    "ionic-native-transitions": "^1.0.2",
-    "moment": "^2.15.1",
+    "ionic-native-transitions": "^1.0.3",
+    "moment": "^2.17.1",
     "ngstorage": "^0.3.11",
-    "roboto-fontface": "^0.6.0",
-    "tslib": "^1.2.0"
+    "roboto-fontface": "^0.7.0",
+    "tslib": "^1.5.0",
+    "validate-commit-msg": "^2.11.1"
   }
 }
