--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "server:hmr:restart": "yarn server:restart -- --inline --hot",
     "preserver:hmr:start": "yarn clean:build",
     "server:hmr:start": "yarn build:vendor && yarn server:hmr:restart",
-    "show:build": "serveur -L -cbJS -o www -p 3000",
-    "show:coverage": "serveur -L -cbJS -o coverage/html -p 8080",
+    "show:build": "live-server --host=localhost --port=3000 --open=www",
+    "show:build:preview": "live-server --host=localhost --port=3000 --open=www/preview",
+    "show:coverage": "live-server --host=localhost --port=8080 --open=coverage/html",
     "show:stats:app": "source-map-explorer www/main.bundle.js",
     "show:stats:vendors": "source-map-explorer www/dll.vendors.js && source-map-explorer www/dll.vendors.css",
     "github:release": "sh ./release.sh",
@@ -124,6 +125,7 @@
     "chalk": "^1.1.3",
     "change-case": "^3.0.1",
     "concurrently": "^3.1.0",
+    "copy-webpack-plugin": "^4.0.1",
     "cordova": "^6.5.0",
     "css-loader": "^0.26.1",
     "cz-conventional-changelog": "^1.2.0",
@@ -164,6 +166,7 @@
     "karma-sinon-stub-promise": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
+    "live-server": "^1.2.0",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "node-sass": "^4.4.0",
@@ -176,7 +179,6 @@
     "run-sequence": "^1.2.2",
     "sass-loader": "^4.1.1",
     "semver": "^5.3.0",
-    "serveur": "^2.1.0",
     "sinon": "^1.17.7",
     "sinon-stub-promise": "^4.0.0",
     "source-map-explorer": "^1.3.3",
