feat(ceturb): cria component de previsão de ônibus nos pontos
closes #248 closes #249

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@types/cordova": "0.0.34",
     "@types/cordova-ionic": "0.0.29",
     "@types/ionic": "^0.0.33",
+    "@types/leaflet": "^1.0.53",
     "@types/mocha": "^2.2.38",
     "@types/moment": "^2.13.0",
     "@types/ngstorage": "^0.3.33",
@@ -213,6 +214,9 @@
     "ionic-angular": "^1.3.1",
     "ionic-native": "^1.3.24",
     "ionic-native-transitions": "^1.0.3",
+    "leaflet": "^1.0.3",
+    "leaflet.locatecontrol": "^0.60.0",
+    "leaflet.markercluster": "^1.0.3",
     "moment": "^2.17.1",
     "ngstorage": "^0.3.11",
     "roboto-fontface": "^0.7.0",
