--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean:packages": "yarn rimraf -- node_modules",
     "clean:coverage": "yarn rimraf -- coverage",
     "clean:build": "yarn rimraf -- www",
-    "clean:cache": "yarn cache clean && yarn rimaf -- .awcache",
+    "clean:cache": "yarn cache clean && yarn rimraf -- .awcache",
     "clean": "yarn rimraf -- node_modules coverage www .awcache",
     "reinstall": "yarn clean:packages && yarn install",
     "tslint": "tslint src/app/**/*.ts",
@@ -104,78 +104,78 @@
   },
   "homepage": "https://github.com/prodest/es-na-palma-da-mao-mobile#readme",
   "devDependencies": {
-    "@types/angular": "^1.6.2",
+    "@types/angular": "^1.6.16",
     "@types/angular-material": "^1.1.44",
-    "@types/chai": "^3.4.33",
+    "@types/chai": "^3.5.2",
     "@types/cordova": "0.0.34",
     "@types/cordova-ionic": "0.0.29",
     "@types/ionic": "^0.0.33",
-    "@types/leaflet": "^1.0.53",
-    "@types/mocha": "^2.2.38",
+    "@types/leaflet": "^1.0.60",
+    "@types/mocha": "^2.2.41",
     "@types/moment": "^2.13.0",
-    "@types/ngstorage": "^0.3.33",
+    "@types/ngstorage": "^0.3.35",
     "@types/rx": "^2.5.34",
     "@types/sinon": "^1.16.30",
     "@types/sinon-stub-promise": "^1.0.27",
     "@types/ui-router-extras": "^0.0.32",
-    "@types/webpack": "^2.2.4",
-    "awesome-typescript-loader": "^3.0.0-beta.18",
-    "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.22.0",
+    "@types/webpack": "^2.2.15",
+    "awesome-typescript-loader": "^3.1.3",
+    "babel": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "change-case": "^3.0.1",
-    "concurrently": "^3.1.0",
+    "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "cordova": "^6.5.0",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.1",
     "cz-conventional-changelog": "^1.2.0",
     "del": "^2.2.2",
     "dotenv": "^4.0.0",
     "eslint-config-prodest": "^1.0.12",
     "eslint-config-prodest-angular": "^1.0.2",
     "eslint-plugin-angular": "^1.6.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc",
-    "file-loader": "^0.10.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "glob": "^7.0.6",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-help": "^1.6.1",
     "gulp-rename": "^1.2.2",
-    "gulp-shell": "^0.5.2",
+    "gulp-shell": "^0.6.3",
     "gulp-template": "^4.0.0",
-    "html-loader": "^0.4.4",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "htmlhint": "^0.9.13",
-    "htmlhint-loader": "^1.1.1",
-    "husky": "^0.13.1",
-    "image-webpack-loader": "^3.2.0",
+    "htmlhint-loader": "^1.2.0",
+    "husky": "^0.13.3",
+    "image-webpack-loader": "^3.3.0",
     "istanbul": "^0.4.5",
     "istanbul-instrumenter-loader": "^1.2.0",
     "json-loader": "^0.5.4",
-    "karma": "^1.4.1",
+    "karma": "^1.6.0",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
     "karma-es6-shim": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.2",
-    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-coverage": "^0.1.4",
     "karma-sinon": "^1.0.5",
     "karma-sinon-stub-promise": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.2",
+    "karma-webpack": "^2.0.3",
     "live-server": "^1.2.0",
     "lodash": "^4.17.4",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.4.0",
+    "mocha": "^3.3.0",
+    "node-sass": "^4.5.2",
     "opn-cli": "^3.1.0",
     "phantomjs-prebuilt": "^2.1.14",
     "raw-loader": "^0.5.1",
-    "request": "^2.79.0",
-    "rimraf": "^2.5.4",
+    "request": "^2.81.0",
+    "rimraf": "^2.6.1",
     "roboto-font": "^0.1.0",
     "run-sequence": "^1.2.2",
     "sass-loader": "^4.1.1",
@@ -183,44 +183,44 @@
     "sinon": "^1.17.7",
     "sinon-stub-promise": "^4.0.0",
     "source-map-explorer": "^1.3.3",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.17.0",
     "supports-color": "^3.2.3",
     "tslint": "^4.4.2",
-    "tslint-loader": "^3.3.0",
-    "typescript": "^2.1.5",
-    "url-loader": "^0.5.7",
+    "tslint-loader": "^3.5.3",
+    "typescript": "2.1.5",
+    "url-loader": "^0.5.8",
     "validate-commit-msg": "^2.8.2",
     "vinyl-paths": "^2.1.0",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "^2.2.1",
-    "webpack-hot-middleware": "^2.16.1",
+    "webpack": "^2.4.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "^2.6.1",
     "yargs": "^6.6.0"
   },
   "dependencies": {
     "@hoisel/ionic-calendar": "^1.1.1",
-    "angular": "^1.6.1",
-    "angular-animate": "^1.6.1",
-    "angular-aria": "^1.6.1",
+    "angular": "^1.6.4",
+    "angular-animate": "^1.6.4",
+    "angular-aria": "^1.6.4",
     "angular-chart.js": "^1.1.1",
-    "angular-i18n": "^1.6.1",
-    "angular-material": "^1.1.1",
-    "angular-sanitize": "^1.6.1",
+    "angular-i18n": "^1.6.4",
+    "angular-material": "^1.1.4",
+    "angular-sanitize": "^1.6.4",
     "angular-ui-router": "^0.4.2",
-    "chart.js": "^2.4.0",
+    "chart.js": "^2.5.0",
     "font-awesome": "^4.6.3",
     "ionic-angular": "^1.3.1",
     "ionic-native": "^1.3.24",
     "ionic-native-transitions": "^1.0.3",
     "leaflet": "^1.0.3",
     "leaflet.locatecontrol": "^0.60.0",
-    "leaflet.markercluster": "^1.0.3",
-    "moment": "^2.17.1",
+    "leaflet.markercluster": "^1.0.5",
+    "moment": "^2.18.1",
     "ngstorage": "^0.3.11",
     "roboto-fontface": "^0.7.0",
-    "tslib": "^1.5.0",
-    "validate-commit-msg": "^2.11.1"
+    "tslib": "^1.6.1",
+    "validate-commit-msg": "^2.12.1"
   }
 }
