--- a/package.json
+++ b/package.json
@@ -189,7 +189,7 @@
     "tslint-loader": "^3.5.3",
     "typescript": "2.1.5",
     "url-loader": "^0.5.8",
-    "validate-commit-msg": "^2.8.2",
+    "validate-commit-msg": "^2.12.1",
     "vinyl-paths": "^2.1.0",
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.2",
@@ -215,12 +215,10 @@
     "ionic-native": "^1.3.24",
     "ionic-native-transitions": "^1.0.3",
     "leaflet": "^1.0.3",
-    "leaflet.locatecontrol": "^0.60.0",
     "leaflet.markercluster": "^1.0.5",
     "moment": "^2.18.1",
     "ngstorage": "^0.3.11",
     "roboto-fontface": "^0.7.0",
-    "tslib": "^1.6.1",
-    "validate-commit-msg": "^2.12.1"
+    "tslib": "^1.6.1"
   }
 }
