chore(cordova): Atualiza configurações cordova 7 para ios

--- a/package.json
+++ b/package.json
@@ -213,10 +213,10 @@
     "chart.js": "^2.5.0",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
     "cordova-android": "^6.2.3",
+    "cordova-ios": "^4.4.0",
     "cordova-plugin-android-permissions": "^0.10.0",
     "cordova-plugin-compat": "^1.0.0",
     "cordova-plugin-console": "^1.0.7",
-    "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "^1.1.6",
     "cordova-plugin-digits": "git+https://github.com/prodest/cordova-plugin-digits.git",
     "cordova-plugin-facebook4": "^1.7.4",
