chore(build): Utiliza npm ao invés de yarn para comandos

--- a/package.json
+++ b/package.json
@@ -5,44 +5,44 @@
   "description": "O ES NA PALMA DA MÃO é um programa do Governo do Estado do Espírito Santo que reúne iniciativas e serviços do Governo em plataforma móvel (aplicativo) e web, com unidade de experiência do cidadão. Por meio do ES NA PALMA DA MÃO, diversos serviços governamentais podem ser acessados através da web e dispositivos móveis (sistemas operacionais iOS e Android) utilizando uma interface comum.",
   "scripts": {
     "rimraf": "rimraf",
-    "clean:packages": "yarn rimraf -- node_modules",
-    "clean:coverage": "yarn rimraf -- coverage",
-    "clean:build": "yarn rimraf -- www",
-    "clean:cache": "yarn cache clean && yarn rimraf -- .awcache",
-    "clean": "yarn rimraf -- node_modules coverage www .awcache",
-    "reinstall": "yarn clean:packages && yarn install",
+    "clean:packages": "npm run rimraf -- node_modules",
+    "clean:coverage": "npm run rimraf -- coverage",
+    "clean:build": "npm run rimraf -- www",
+    "clean:cache": "npm run cache clean && npm run rimraf -- .awcache",
+    "clean": "npm run rimraf -- node_modules coverage www .awcache",
+    "reinstall": "npm run clean:packages && npm run install",
     "tslint": "tslint src/app/**/*.ts",
     "htmlhint": "htmlhint --config .htmlhintrc src/app/**/*.html",
-    "lint": "concurrently \"yarn tslint\" \"yarn htmlhint\"",
-    "pretest": "yarn tslint",
+    "lint": "concurrently \"npm run tslint\" \"npm run htmlhint\"",
+    "pretest": "npm run tslint",
     "test": "karma start",
-    "test:watch": "yarn test -- --auto-watch --no-single-run",
-    "pretest:coverage": "yarn clean:coverage",
-    "test:coverage": "yarn test -- --coverage",
-    "test:coverage:watch": "yarn test:coverage -- --auto-watch --no-single-run",
-    "test:coverage:all": "yarn test:coverage -- --target all",
-    "test:coverage:all:watch": "yarn test:coverage:all -- --auto-watch --no-single-run",
+    "test:watch": "npm run test -- --auto-watch --no-single-run",
+    "pretest:coverage": "npm run clean:coverage",
+    "test:coverage": "npm run test -- --coverage",
+    "test:coverage:watch": "npm run test:coverage -- --auto-watch --no-single-run",
+    "test:coverage:all": "npm run test:coverage -- --target all",
+    "test:coverage:all:watch": "npm run test:coverage:all -- --auto-watch --no-single-run",
     "webpack": "webpack --progress",
     "webpack-dev-server": "webpack-dev-server",
     "build:debug": "webpack --display-modules --sort-modules-by size",
     "build:vendor": "webpack --config config/webpack.config.vendors.js --progress --profile",
     "build:dev:app": "webpack --config config/webpack.config.dev.js --progress --profile",
-    "prebuild:dev": "yarn clean:build",
-    "build:dev": "yarn build:vendor && yarn build:dev:app",
-    "prebuild:stats": "yarn build:dev",
-    "build:stats": "yarn show:stats:app && yarn show:stats:vendors",
+    "prebuild:dev": "npm run clean:build",
+    "build:dev": "npm run build:vendor && npm run build:dev:app",
+    "prebuild:stats": "npm run build:dev",
+    "build:stats": "npm run show:stats:app && npm run show:stats:vendors",
     "build:prod:app": "webpack --config config/webpack.config.prod.js --progress --profile",
-    "prebuild:prod": "yarn clean:build",
-    "build:prod": "yarn build:vendor && yarn build:prod:app && gulp tree-shaking",
-    "build": "yarn build:prod",
+    "prebuild:prod": "npm run clean:build",
+    "build:prod": "npm run build:vendor && npm run build:prod:app && gulp tree-shaking",
+    "build": "npm run build:prod",
     "preserver:restart": "opn http://localhost:3000/",
     "server:restart": "webpack-dev-server --config config/webpack.config.dev.js --progress --profile --watch --content-base www/",
-    "preserver:start": "yarn clean:build",
-    "server:start": "yarn build:vendor && yarn server:restart",
-    "server:": "yarn server:start",
-    "server:hmr:restart": "yarn server:restart -- --inline --hot",
-    "preserver:hmr:start": "yarn clean:build",
-    "server:hmr:start": "yarn build:vendor && yarn server:hmr:restart",
+    "preserver:start": "npm run clean:build",
+    "server:start": "npm run build:vendor && npm run server:restart",
+    "server:": "npm run server:start",
+    "server:hmr:restart": "npm run server:restart -- --inline --hot",
+    "preserver:hmr:start": "npm run clean:build",
+    "server:hmr:start": "npm run build:vendor && npm run server:hmr:restart",
     "show:build": "live-server --host=localhost --port=3000 --open=www",
     "show:build:preview": "live-server --host=localhost --port=3000 --open=www/preview",
     "show:coverage": "live-server --host=localhost --port=8080 --open=coverage/html",
@@ -52,8 +52,8 @@
     "component": "gulp generate --template component",
     "state": "gulp generate --template state",
     "commitmsg": "validate-commit-msg",
-    "postmerge": "yarn install",
-    "postrewrite": "yarn install"
+    "postmerge": "npm run install",
+    "postrewrite": "npm run install"
   },
   "config": {
     "validate-commit-msg": {
@@ -187,7 +187,7 @@
     "supports-color": "^3.2.3",
     "tslint": "^4.4.2",
     "tslint-loader": "^3.5.3",
-    "typescript": "2.1.5",
+    "typescript": "^2.4.0",
     "url-loader": "^0.5.8",
     "validate-commit-msg": "^2.12.1",
     "vinyl-paths": "^2.1.0",
