--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "server:restart": "webpack-dev-server --config config/webpack.config.dev.js --progress --profile --watch --content-base www/",
     "preserver:start": "npm run clean:build",
     "server:start": "npm run build:vendor && npm run server:restart",
-    "server:": "npm run server:start",
+    "server": "npm run server:start",
     "server:hmr:restart": "npm run server:restart -- --inline --hot",
     "preserver:hmr:start": "npm run clean:build",
     "server:hmr:start": "npm run build:vendor && npm run server:hmr:restart",
@@ -210,14 +210,35 @@
     "angular-sanitize": "^1.6.4",
     "angular-ui-router": "^0.4.2",
     "chart.js": "^2.5.0",
+    "com.telerik.plugins.nativepagetransitions": "~0.6.5",
+    "cordova-android": "^6.2.3",
+    "cordova-android-gradle-resolve": "https://github.com/prodest/cordova-android-gradle-resolve.git",
+    "cordova-plugin-android-permissions": "~1.0.0",
+    "cordova-plugin-appavailability": "^0.4.2",
+    "cordova-plugin-console": "~1.0.7",
+    "cordova-plugin-crosswalk-webview": "^2.3.0",
+    "cordova-plugin-device": "~1.1.6",
+    "cordova-plugin-facebook4": "~1.9.1",
+    "cordova-plugin-geolocation": "~2.4.3",
+    "cordova-plugin-googleplus": "https://github.com/vizeke/cordova-plugin-googleplus.git",
+    "cordova-plugin-inappbrowser": "~1.7.1",
+    "cordova-plugin-network-information": "~1.3.3",
+    "cordova-plugin-splashscreen": "~4.0.3",
+    "cordova-plugin-statusbar": "~2.2.3",
+    "cordova-plugin-whitelist": "~1.3.2",
+    "cordova-plugin-x-socialsharing": "~5.1.8",
+    "cordova.plugins.diagnostic": "~3.6.6",
     "font-awesome": "^4.6.3",
     "ionic-angular": "^1.3.1",
     "ionic-native": "^1.3.24",
     "ionic-native-transitions": "^1.0.3",
+    "ionic-plugin-keyboard": "~2.2.1",
     "leaflet": "^1.0.3",
     "leaflet.markercluster": "^1.0.5",
     "moment": "^2.18.1",
     "ngstorage": "^0.3.11",
+    "phonegap-plugin-barcodescanner": "^6.0.8",
+    "phonegap-plugin-push": "~1.10.5",
     "roboto-fontface": "^0.7.0",
     "tslib": "^1.6.1"
   }
